--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <script
       type="text/javascript"
-      src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=r6w1wxj7uo"
+      src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=%REACT_APP_NAVER_KEY%"
     ></script>
 
     <title>React App</title>
