--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,13 @@
       rel="stylesheet"
     />
 
-    <script
+    <!-- <script
       type="text/javascript"
       src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=%REACT_APP_NAVER_KEY%"
+    ></script> -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_KEY%"
     ></script>
 
     <title>React App</title>
